--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "^16.1.3",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/uuid": "^9.0.8",
+    "drizzle-kit": "^0.21.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
+    "express": "^4.19.2",
+    "postgres": "^3.4.4",
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate": "ts-node-dev src/migrations/migrate.ts"
   }
 }
